site/docs/.vitepress/theme/custom.css
/** Base Styles */

h1:not(.title),
h2:not(.title),
h3:not(.title),
h4,h5,h6 {
  display: flex;
  margin-block-end: var(--fluid-8);
  margin-block-start: var(--fluid-24);
}

a.header-anchor {
  float: none;
  display: flex;
  margin-top: initial;
  margin-left: inital; 
  padding-right: 0;
  margin-inline-start: var(--fluid-8);
  align-self: center;
}

/* Usage icons */
#react img,
#vue-3 img,
#angular img,
#svelte img {
  margin-inline-end: var(--fluid-8);
}
#angular img,
#react img {
  width: var(--fluid-24);
}
#svelte img,
#vue-3 img {
  width: var(--fluid-20);
}

/* Stuff copied over from original Showcase site */
.quoted::before {
  /* Many sans fonts do not have smart or book quotes so prefer ones that do */
  font-family: Georgia, 'Times New Roman', Times, serif;
  content: open-quote;
}

.quoted::after {
  /* Many sans fonts do not have smart or book quotes so prefer ones that do */
  font-family: Georgia, 'Times New Roman', Times, serif;
  content: close-quote;
}

.quoted {
  /* Kind of cludgy, but this will preserve your main font within the smart quotes */
  font-family: inherit;
  quotes: '“''”''‘''’';
}

:root {


  /**
   * Z Indexes
   *
   * Algolia SearchBox has a z-index of 200, so make sure not to go above
   * that value.
   * --------------------------------------------------------------------- */

  --z-index-navbar: 10;
  --z-index-sidebar: 6;

  /**
   * Shadows
   * --------------------------------------------------------------------- */

  --shadow-1: 0 1px 2px rgba(0, 0, 0, 0.04), 0 1px 2px rgba(0, 0, 0, 0.06);
  --shadow-2: 0 3px 12px rgba(0, 0, 0, 0.07), 0 1px 4px rgba(0, 0, 0, 0.07);
  --shadow-3: 0 12px 32px rgba(0, 0, 0, 0.1), 0 2px 6px rgba(0, 0, 0, 0.08);
  --shadow-4: 0 14px 44px rgba(0, 0, 0, 0.12), 0 3px 9px rgba(0, 0, 0, 0.12);
  --shadow-5: 0 18px 56px rgba(0, 0, 0, 0.16), 0 4px 12px rgba(0, 0, 0, 0.16);

  /**
   * Sizes
   * --------------------------------------------------------------------- */

  --header-height: 3.6rem;
}

/** Fallback Styles */
:root {
  --c-divider: var(--c-divider-light);

  --c-text: var(--agnostic-dark); /* #33 */
  --c-text-light: #444;;
  --c-text-lighter: var(--agnostic-gray-dark); /* #75 */
  --c-bg: var(--c-white);
  --c-bg-accent: var(--c-white-dark);

  --code-line-height: 24px;
  --code-font-family: var(--font-family-mono);
  --code-font-size: 14px;
  --code-inline-bg-color: rgba(27, 31, 35, 0.05);
  --code-bg-color: #282c34;

  /* Overrides */

  /**
   * Typography
   * --------------------------------------------------------------------- */

   --font-family-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans',
   'Ubuntu', 'Fira Sans', Helvetica, 'Droid Sans', 'Helvetica Neue', sans-serif,
   'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --font-family-mono: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
  --c-white: #ffffff;
  --c-white-dark: var(--agnostic-gray-extra-light);
  --c-black: #000000;

  /* --c-divider-light: rgba(60, 60, 67, 0.12); */
  --c-divider-dark: var(--agnostic-gray-dark);

  /* TODO -- need to audit these vitepress defaults for a11y -- seem too light */
  /* --c-text-light-1: #2c3e50;
  --c-text-light-2: #476582;
  --c-text-light-3: #90a4b7; */

  --c-brand: var(--agnostic-primary);
  --c-brand-light: var(--agnostic-primary-hover);
}

.agnostic {
  display: inline-block;
  font-weight: 700;
}

.agnostic::first-letter,
.agnostic::after,
.nav-bar-title::first-letter,
.nav-bar-title::after,
.title::after,
.title::first-letter {
  color: var(--c-brand);
}

.agnostic::after,
.nav-bar-title::after,
.title::after {
  content: "UI";
}

.feature .title::after {
  content: "";
}

.footer .container {
  border-top: none !important;
}

main.home {
  position: relative;
}
/* ... */

